<resources>
    <string name="title_home">Home</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>
    <string name="app_update_have_nonewversion">This is the latest version</string>
    <string name="app_update_current_version">Current version：</string>
    <string name="app_update_found_newversion">The new version：</string>
    <string name="app_update_sure_updata">Whether to update?</string>
    <string name="app_update_updata_app_title">App update</string>
    <string name="app_update_to_updata">Update</string>
    <string name="app_update_to_after">Don\'t update</string>
    <string name="app_update_download_ok">Download complete</string>
    <string name="app_update_sure_install">Install the new application?</string>
    <string name="app_update_have_downloading">Downloading</string>
    <string name="app_update_have_canceldownload">Cancel the download</string>
    <string name="app_version_to_update">Update</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="close">Close</string>
    <string name="ignore">Ignore</string>
    <string name="warning">Warning</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="modify">modify</string>
    <string name="delete">Delete</string>
    <string name="ready">Ready</string>
    <string name="retry">Retry</string>
    <string name="camera">Camera</string>
    <string name="loading">Loading&#8230;</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="selectall">Select All</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="reboot">Reboot</string>
    <string name="check_firmware">Check New Firmware</string>
    <string name="prompt">Prompt</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="finish">Finish</string>
    <string name="download">Download</string>
    <string name="title_camera_list">Camera List</string>
    <string name="title_seach_camera">Search Camera</string>
    <string name="title_camera_name">Camera Name</string>
    <string name="title_deviceSetting">Device Setting</string>
    <string name="title_camera_photos_videos">Image</string>
    <string name="title_camera_photos">Photos</string>
    <string name="title_scan_qrcode">Scan QR Code</string>
    <string name="title_add_camera">Add Camera</string>
    <string name="title_add_camera_fail">Add Camera Failed</string>
    <string name="title_modify_camera_password">Modify Camera Password</string>
    <string name="title_edit_camera_info">Edit Camera</string>
    <string name="title_event_list">View Event</string>
    <string name="title_setting_wifi">Wi-Fi Setting</string>
    <string name="title_camera_setting_event">Event Setting</string>
    <string name="title_camera_setting_record">Record Setting</string>
    <string name="title_camera_setting_sens">Sensitivity Setting</string>
    <string name="title_mail_setting">Email Setting</string>
    <string name="title_ftp_setting">FTP Setting</string>
    <string name="title_camera_setting_other">Other Setting</string>
    <string name="title_camera_setting_timezone">Time Zone</string>
    <string name="title_camera_setting_time">Time Setting</string>
    <string name="title_sdcard_setting">SD Card</string>
    <string name="title_setting_devinfo">Device Information</string>
    <string name="title_camera_setting_system">System Setting</string>
    <string name="title_about">About</string>
    <string name="title_about_fragment">About</string>
    <string name="title_userhelp">Help</string>
    <string name="title_version">APP Version</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_sub_device_time">Device Time</string>
    <string name="title_sub_device_timezone">Device Time Zone</string>
    <string name="title_camera_setting_record_timing">Timing Record</string>
    <string name="title_camera_setting_audio">Audio Setting</string>
    <string name="lab_first_add_camera">tap to add camera</string>
    <string name="lab_password_old">Old</string>
    <string name="lab_password_new">New</string>
    <string name="lab_password_confirm">Confirm</string>
    <string name="lab_camera_password">Password</string>
    <string name="lab_scan_qrcode">Align camera QR Code within frame to scan</string>
    <string name="lab_wireless_set_wifi">Wireless Installation</string>
    <string name="lab_btn_scan_qrcode">Scan QR Code</string>
    <string name="lab_btn_search_lan">LAN Search</string>
    <string name="lab_camera_name">Name</string>
    <string name="lab_camera_uid">UID</string>
    <string name="lab_searchevent_from">From</string>
    <string name="lab_searchevent_to">To</string>
    <string name="lab_searchevent_from_time">From Time</string>
    <string name="lab_searchevent_to_time">To Time</string>
    <string name="lab_searchevent_from_date">From Date</string>
    <string name="lab_searchevent_to_date">To Date</string>
    <string name="lab_camera_setting_push">Alarm Push</string>
    <string name="lab_camera_setting_push_battery">Battery Alarm Push </string>
    <string name="lab_camera_setting_eventrecord">Alarm Record</string>
    <string name="lab_camera_setting_event_sdrecord">SD-Card Recording</string>
    <string name="lab_camera_setting_event_email">Email Alert</string>
    <string name="lab_camera_setting_event_email_setting">Email Setting</string>
    <string name="lab_camera_setting_event_ftp_pic">Save Picture to FTP Server</string>
    <string name="lab_camera_setting_event_ftp_video">Save Video to FTP Server</string>
    <string name="lab_camera_setting_event_ftp_setting">FTP Setting</string>
    <string name="lab_camera_setting_sens">Sensitivity Setting</string>
    <string name="lab_camera_setting_duration_record">Record Duration</string>
    <string name="lab_camera_setting_mail">Mail Setting</string>
    <string name="lab_camera_setting_record">Record</string>
    <string name="lab_camera_setting_record_timing">Timing Record</string>
    <string name="lab_mail_alert_enable">Enable Email Alert</string>
    <string name="lab_mail_setting_sender">Email</string>
    <string name="lab_mail_setting_sender_pwd">Password</string>
    <string name="lab_mail_setting_advance">Advanced Setting</string>
    <string name="lab_mail_setting_smtp_server">SMTP Server Host</string>
    <string name="lab_mail_setting_port">Port</string>
    <string name="lab_mail_setting_safety_connection">Safe link</string>
    <string name="lab_mail_setting_verification">Verification</string>
    <string name="lab_mail_setting_username">Username</string>
    <string name="lab_mail_setting_password">Password</string>
    <string name="lab_mail_setting_receive_address">Send to</string>
    <string name="lab_mail_setting_sending_address">Sender</string>
    <string name="lab_mail_setting_theme">Subject</string>
    <string name="lab_mail_setting_message">Message</string>
    <string name="lab_other_setting_timezone">Time Zone</string>
    <string name="lab_other_setting_time">Time Setting</string>
    <string name="lab_other_setting_reverse">Mirror</string>
    <string name="lab_other_setting_inverse">Flip</string>
    <string name="lab_other_setting_osdtime">OSD Time</string>
    <string name="lab_other_setting_ledlight">Led Light</string>
    <string name="lab_other_setting_alarm_led">Led</string>
    <string name="lab_other_setting_sdcard">SD Card</string>
    <string name="lab_other_setting_devinfo">Device Information</string>
    <string name="lab_camera_model">Model</string>
    <string name="lab_camera_version">Version</string>
    <string name="lab_camera_version_soft">Software Version</string>
    <string name="lab_camera_version_fm">Firmware Version</string>
    <string name="lab_camera_info_network">Network</string>
    <string name="lab_camera_info_ip">IP</string>
    <string name="lab_camera_info_submask">Subnet Mask</string>
    <string name="lab_camera_info_gateway">Gateway</string>
    <string name="lab_camera_info_dns">DNS</string>
    <string name="lab_flash">Flash</string>
    <string name="lab_skip_scanqrcode">No QR Code</string>
    <string name="lab_setting_camera_name">Camera Name</string>
    <string name="lab_setting_modify_password">Change Password</string>
    <string name="lab_setting_network">Wi-Fi</string>
    <string name="lab_setting_event">Event Setting</string>
    <string name="lab_setting_record">Record Setting</string>
    <string name="lab_setting_other">Other Setting</string>
    <string name="lab_setting_system">System Setting</string>
    <string name="lab_record_event">EVENT RECORD</string>
    <string name="lab_record_time">TIMING RECORD</string>
    <string name="lab_password_show">show password</string>
    <string name="lab_time_setting_select_time_zone">Select time zone</string>
    <string name="lab_time_setting_acc_time">Camera time</string>
    <string name="lab_time_setting_dst">Clock for daylight saving time</string>
    <string name="lab_camera_password_reenter">Re-enter password</string>
    <string name="lab_share_email_chooseClient">Choose Email Client</string>
    <string name="lab_record_timing_duration">Duration</string>
    <string name="lab_record_timing_seconds">seconds</string>
    <string name="lab_record_timing_time">Video Time</string>
    <string name="lab_volumn_input">Input volume</string>
    <string name="lab_volumn_output">Output volume</string>
    <string name="lab_other_setting_audio">Audio Setting</string>
    <string name="lab_ftp_setting_server">Server</string>
    <string name="lab_ftp_setting_port">Server Port</string>
    <string name="lab_ftp_setting_username">User Name</string>
    <string name="lab_ftp_setting_password">Password</string>
    <string name="lab_ftp_setting_passive_mode">Passive mode</string>
    <string name="lab_ftp_setting_path">Path</string>
    <string name="tips_recordtime_none_title">NONE</string>
    <string name="tips_recordtime_none_desc">Device will stop recording on SD Card</string>
    <string name="tips_recordtime_allday_title">ALL DAY</string>
    <string name="tips_recordtime_allday_desc">24/7 Continuous Record</string>
    <string name="tips_recordtime_custom_title">CUSTOM SETTING</string>
    <string name="tips_recordtime_custom_desc">Set your own recording time</string>
    <string name="tips_add_camera_fail_title">Wi-Fi Configure Failed</string>
    <string name="tips_add_camera_fail_1">Notes for Wi-Fi configuration of IP camera:\n1. Please confirm your Wi-Fi is 2.4GHz.\n2. The Wi-Fi Encryption must be WPA/WPA2.\n3. Make sure no unsupported characters＂ \ ` $（$[ $ included in Wi-Fi password and SSID.\n4. DHCP is enabled in Router.\n5. Please keep camera near to your router &#038; your phone and connect to stable network.\n6. The indoor camera will beep when configuring Wi-Fi, please turn up phone volume for better configuration. If you need configure an outdoor IP camera, please power the camera and press the reset button about 10 seconds to restore factory settings before configuration.</string>
    <string name="hint_input_camera_password">Camera Password</string>
    <string name="hint_mail_setting_sender">Email</string>
    <string name="hint_mail_setting_sender_pwd">Password</string>
    <string name="hint_mail_setting_smtp_server">SMTP Server Host</string>
    <string name="hint_mail_setting_port">Port</string>
    <string name="hint_mail_setting_receive_address">Send to</string>
    <string name="hint_ftp_setting_server">Ftp Server Address</string>
    <string name="hint_ftp_setting_username">Ftp Account</string>
    <string name="hint_ftp_setting_password">Ftp Password</string>
    <string name="hint_ftp_setting_path">Path</string>
</resources>