<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightestgray"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <com.tws.commonlib.controller.NavigationBar
        android:id="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_top">

        <LinearLayout
            style="@style/editbox_container_ll"
            android:orientation="vertical">

            <LinearLayout
                style="@style/editbox_item_ll">

                <TextView
                    style="@style/editbox_item_textview"
                    android:text="@string/lab_mail_alert_enable"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/togbtn_open"
                    style="@style/btn_toggle_style"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:button="@drawable/toggle_btn_style"
                    android:gravity="right|center"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.7dp"
                        android:background="#cacaca" />

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_sender" />

                        <EditText
                            android:id="@+id/mailbox_setting_username_edt"
                            style="@style/editbox_item_edittext"
                            android:hint="@string/hint_mail_setting_sender"
                            android:textColorHint="@color/lightgray"
                            android:inputType="text" />
                    </LinearLayout>

                    <View
                        style="@style/split_short_thin_style"
                        android:layout_width="match_parent" />

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_sender_pwd" />

                        <EditText
                            android:id="@+id/mailbox_setting_psw_edt"
                            style="@style/editbox_item_edittext"
                            android:hint="@string/hint_mail_setting_sender_pwd"
                            android:textColorHint="@color/lightgray"
                            android:inputType="textPassword" />
                    </LinearLayout>

                    <View
                        style="@style/split_long_thin_style"
                        android:layout_width="match_parent" />


                </LinearLayout>

                <LinearLayout
                    style="@style/editbox_item_ll"
                    android:background="@color/white">

                    <TextView
                        style="@style/editbox_item_textview"
                        android:text="@string/lab_mail_setting_advance"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp" />

                    <ToggleButton
                        android:id="@+id/togbtn_advance"
                        style="@style/btn_toggle_style"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:background="@android:color/transparent"
                        android:button="@drawable/toggle_btn_style"
                        android:gravity="right|center"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mailbox_setting_detail_layout"
                    style="@style/editbox_container_ll"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_receive_address" />

                        <EditText
                            android:id="@+id/mailbox_setting_receive_edt"
                            style="@style/editbox_item_edittext"
                            android:hint="@string/hint_mail_setting_receive_address"
                            android:textColorHint="@color/lightgray"
                            android:inputType="text" />
                    </LinearLayout>

                    <View
                        style="@style/split_short_thin_style"
                        android:layout_width="match_parent" />

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_smtp_server" />

                        <EditText
                            android:id="@+id/mailbox_setting_server_edt"
                            style="@style/editbox_item_edittext"
                            android:textColorHint="@color/lightgray"
                            android:hint="@string/hint_mail_setting_smtp_server" />
                    </LinearLayout>

                    <View
                        style="@style/split_short_thin_style"
                        android:layout_width="match_parent" />

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_port" />

                        <EditText
                            android:id="@+id/mailbox_setting_port_edt"
                            style="@style/editbox_item_edittext"
                            android:hint="@string/hint_mail_setting_port"
                            android:textColorHint="@color/lightgray"
                            android:inputType="number" />
                    </LinearLayout>

                    <View
                        style="@style/split_short_thin_style"
                        android:layout_width="match_parent" />

                    <LinearLayout style="@style/editbox_item_ll">

                        <TextView
                            style="@style/editbox_item_textview"
                            android:text="@string/lab_mail_setting_safety_connection" />

                        <Spinner
                            android:id="@+id/mailbox_setting_safety_spn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="right" />
                    </LinearLayout>

                    <View
                        style="@style/split_long_thin_style"
                        android:layout_width="match_parent" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>